# evals

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  VERSIONING.md  development.html  examples.html  explanation.html  guides.html  index.html  intro.html  llms.html  package-lock.json  package.json  pyproject.toml  pytest.ini  reference.html  sitemap.xml  tutorials.html  ui.html
category/: cli-reference.html  development.html  explanation.html  getting-started.html  guides.html  reference.html
cli/: .gitignore  README.md  cli-add.html  cli-benchmark.html  cli-config.html  cli-env-vars.html  cli-eval.html  cli-init.html  cli-overview.html  pyproject.toml  (+1 more)
sdk/python/: .gitignore  INTEGRATION_TESTING.md  README.md  pyproject.toml  pytest.ini  run_integration_tests.py
sdk/python/tests/: conftest.py
sdk/python/tests/integration/: README.md  harness.py  run_all_integration_tests.py  test_anthropic_sdk.py  test_browser_use.py  test_browser_use_integration.py  test_http_client_integration.py  test_httpx_integration.py  test_langchain.py  test_litellm.py  test_openai_sdk.py  test_other_llm_libraries.py  test_real_api_calls.py  test_requests_integration.py
sdk/python/tests/unit/: test_config.py  test_exporter.py  test_fsspec_store.py  test_instrumentation.py  test_logger.py  test_register.py  test_store.py  test_store_old.py
sdk/python/trainloop_llm_logging/: config.py  exporter.py  logger.py  register.py  store.py  types.py
sdk/python/trainloop_llm_logging/instrumentation/: http_client_lib.py  httpx_lib.py  requests_lib.py  utils.py
(+707 files in other folders)
