[tool.poetry]
name = "trainloop-monorepo"
version = "0.3.0"
description = "TrainLoop monorepo (CLI + infra + UI)"
authors = ["Mason Pierce <masonpierce@trainloop.ai>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
trainloop-cli = { path = "cli", develop = true }
trainloop-llm-logging = { path = "sdk/python", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
